Revise installation summary and add error output